force-app/main/default/objects/Product__c/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <description>Identifies what family of service is</description>
    <label>Family</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>Add-On</fullName>
            </value>
            <value>
                <fullName>Professional Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>