force-app/main/default/objects/Product__c/fields/Is_Addon__c.field-meta.xml
<CustomField>
    <fullName>Is_Addon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Addon</label>
    <type>Checkbox</type>
</CustomField>