force-app/main/default/objects/Product__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Subscription</fullName>
                <default>true</default>
                <label>Subscription</label>
            </value>
            <value>
                <fullName>Add-on</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>One-time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>